--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /venv
+__pycache__/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+*.vsix
